daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N25_bad_artifact_commitment/AuthMsg.hex
8378216461796c696768742e617574686f72697a6174696f6e2e6d6573736167652e763675575543492d4441594c494748543a415554483a7636584023749c0f10d8e2268e23446f3bb4ad534447ad7bd7999252e85611a1c818dfb2c88ecb0fe722cd02a12a6b408d03ce743232648722398eb1d7862cba7a19186f
